tests/samples/0105/error.txt
error[P0047]: literal type `null` cannot be used in an intersection
  --> 0105/code.ara:2:14
  |
2 | function foo(null&Bar $bar): mixed {}
  |              ^^^^-
  |              |    
  |              literal type `null` cannot be used in an intersection
  |
  = note: a literal type is either `1`, `1.6`, `"foo"`, `false`, `true` or `null`.
  = help: try using a different type for the intersection.

error[P0047]: literal type `null` cannot be used in an intersection
  --> 0105/code.ara:4:18
  |
4 | function foo(Bar&null $bar): mixed {}
  |                 -^^^^ literal type `null` cannot be used in an intersection
  |
  = note: a literal type is either `1`, `1.6`, `"foo"`, `false`, `true` or `null`.
  = help: try using a different type for the intersection.

